--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,13 @@
                 android:value="MainActivity" />
         </activity>
         <activity
-            android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings"></activity>
+                    android:name=".SettingsActivity"
+                    android:label="@string/title_activity_settings"
+                   android:parentActivityName=".MainActivity" >
+                    <meta-data
+                        android:name="android.support.PARENT_ACTIVITY"
+                        android:value="com.example.nikhil.sunshine.MainActivity" />
+                </activity>
     </application>
 
 </manifest>
