--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
         </activity>
+        <provider
+                    android:authorities="com.example.nikhil.sunshine.app"
+                    android:name=".data.WeatherProvider" />
         <activity
                     android:name=".SettingsActivity"
                     android:label="@string/title_activity_settings"
