--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
                     android:authorities="com.example.nikhil.sunshine.app"
                     android:name=".data.WeatherProvider" />
         <service android:name=".service.SunshineService"/>
+        <receiver android:name=".service.SunshineService$AlarmReceiver" android:enabled="true"/>
+
         <activity
                     android:name=".SettingsActivity"
                     android:label="@string/title_activity_settings"
